# rust

./: .gitignore  Cargo.toml  RHA.dmg  build-mac-app.sh  package-dmg.sh
.cargo/: config.toml
RHA.app/Contents/: Info.plist
RHA.app/Contents/Resources/: test.db
RHA.app/Contents/_CodeSignature/: CodeResources
data/: players.xml  test.db  test.db-journal
src/: constants.rs  http_client.rs  main.rs  main_menu.rs  main_sideview.rs  main_window.rs  menu.rs  window.rs
src/actions/: list_players.rs  mod.rs  print_hello.rs  print_hello2.rs  updates.rs
src/libs/: database.rs  mod.rs  objc_shims.rs
src/models/: mod.rs  models.rs  news.rs  player.rs
src/traits/: mod.rs
src/views/: main_sideview.rs  main_view.rs  mod.rs  news_table.rs  player_table.rs  sidebar_button.rs  things_button.rs
src/views/utils/: clear_scroll_views.rs  mod.rs
