[package]
name = "RHA"
version = "0.0.1"
edition = "2024"

[dependencies]
cocoa = "0.26"
objc = "0.2.7"
rusqlite = "0.34"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4" # Para logging
env_logger = "0.10" # Para inicializar el logger